--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<iframe src="http://free.timeanddate.com/clock/i7h1wgpk/n127/fs32/tct/pct/ftbi/tt0/tm1/ts1/tb4" frameborder="0" width="392" height="75" allowTransparency="true"></iframe>
+<a href="https://time.is/Las_Vegas" id="time_is_link" rel="nofollow" style="font-size:46px">Time in Las Vegas:</a>
+<span id="Las_Vegas_z14e" style="font-size:46px"></span>
+<script src="//widget.time.is/en.js"></script>
+<script>
+time_is_widget.init({Las_Vegas_z14e:{template:"TIME<br>DATE", time_format:"12hours:minutesAMPM", date_format:"dayname, monthname dnum, year"}});
+</script>
