--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <style>
+        body {
+            background-color: #2f3437;
+        }
+    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+ 
+<!-- Paste your code under this -->
+ 
+  <iframe src="http://free.timeanddate.com/clock/i7h1wgpk/n127/fs32/tct/pct/ftbi/tt0/tm1/ts1/tb4" frameborder="0" width="392" height="75" allowTransparency="true"></iframe>
+ 
+</body>
+</html>
 
 
-<iframe src="http://free.timeanddate.com/clock/i7h1wgpk/n127/fs32/tct/pct/ftbi/tt0/tm1/ts1/tb4" frameborder="0" width="392" height="75" allowTransparency="true"></iframe>
 
 
 
