--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
  
 <!-- Paste your code under this -->
  
-  <iframe src="http://free.timeanddate.com/clock/i7h1wgpk/n127/fs32/tct/pct/ftbi/tt0/tm1/ts1/tb4" frameborder="0" width="392" height="75" allowTransparency="true"></iframe>
- 
+    <a href="https://time.is/Los_Angeles" id="time_is_link" rel="nofollow" style="font-size:36px">Time in Los Angeles:</a>
+<span id="Los_Angeles_z14e" style="font-size:36px"></span>
+<script src="//widget.time.is/en.js"></script>
+<script>
+time_is_widget.init({Los_Angeles_z14e:{template:"TIME<br>DATE", time_format:"12hours:minutesAMPM", date_format:"dayname, monthname dnum, year"}});
+</script>
+    
+  
 </body>
 </html>
 
