--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  
 <!-- Paste your code under this -->
  
-    <a href="https://time.is/Los_Angeles" id="time_is_link" rel="nofollow" style="font-size:36px">Time in Los Angeles:</a>
+    <a href="https://time.is/Los_Angeles" id="time_is_link" rel="nofollow" style="font-size:36px"></a>
 <span id="Los_Angeles_z14e" style="font-size:36px"></span>
 <script src="//widget.time.is/en.js"></script>
 <script>
