--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  
 <!-- Paste your code under this -->
     
-    <p style="color:white;">
+    <p style="color:#ffffff">
     <b>
  
     <a href="https://time.is/Los_Angeles" id="time_is_link" rel="nofollow" style="font-size:36px"></a>
