--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <span id="Los_Angeles_z14e" style="font-size:44px;color:#ffffff"></span>
         <script src="//widget.time.is/en.js"></script>
         <script>
-        time_is_widget.init({Los_Angeles_z14e:{template:"TIME<br>DATE", time_format:"12hours:minutesAMPM", date_format:"dayname, monthname dnum, year"}});
+        time_is_widget.init({Los_Angeles_z14e:{template:"DATE<br>TIME", time_format:"12hours:minutesAMPM", date_format:"dayname, monthname dnum, year"}});
         </script>
         
     </b>
