--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         var minutes = myDate.getMinutes(); 
         minutes = minutes < 10 ? '0' + minutes : minutes; 
         var myTime = hours  +  ":" + minutes + ampm ; 
-        document.write(myTime); 
+        // document.write(myTime); 
     </script> 
     
     
