--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         var myDate = new Date(); 
         var myDay = myDate.getDay(); 
         var myMonth = myDate.getMonth();
-        var myDayNum = myDate.getDate()
-        var myYear = myDate.getFullYear()
+        var myDayNum = myDate.getDate();
+        var myYear = myDate.getFullYear();
         
         // Array of days. 
         var weekday = ['Sunday', 'Monday', 'Tuesday', 
